--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
             <li><a href="#">Privacy policy</a></li>
           </ul>
         </div>
-
+ 
         <div class="col-lg-3 col-md-3 footer-links">
           <h4>Our Solutions</h4>
           <ul>
@@ -950,7 +950,7 @@
       <p>© <span>Copyright</span> <strong class="px-1 sitename">Restaurantly</strong> <span>All Rights Reserved</span>
       </p>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
+        <!-- All the links in the footer should remain intact. a -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
