--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
         </div>
       </div>
 
-    </section><!-- /Hero Section -->
+    </section>
+    <!-- /Hero Section -->
 
     <!-- About Section -->
     <section id="about" class="about section">
