--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>WHY US</h2>
         <p>Why Choose Our Services</p>
-      </div><!-- End Section Title -->
+      </div>
+      <!-- End Section Title -->
 
       <div class="container">
         <div class="row gy-4">
@@ -163,7 +164,8 @@
               <h4><a href="" class="stretched-link">Innovative Solutions</a></h4>
               <p>We offer seamless integration of delivery apps, ensuring efficiency and increased orders.</p>
             </div>
-          </div><!-- Card Item -->
+          </div>
+          <!-- Card Item -->
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="card-item">
