--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
               <h4><a href="" class="stretched-link">Cost-Effective</a></h4>
               <p>Our zero capital investment setup allows you to start without financial strain.</p>
             </div>
-          </div><!-- Card Item -->
+          </div>
+          <!-- Card Item -->
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card-item">
@@ -181,7 +182,8 @@
               <h4><a href="" class="stretched-link">24/7 Support</a></h4>
               <p>Our continuous expert support ensures smooth operations and customer satisfaction.</p>
             </div>
-          </div><!-- Card Item -->
+          </div>
+          <!-- Card Item -->
         </div>
       </div>
     </section>
