--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Menu</h2>
         <p>Discover Our Delicious Offerings</p>
-      </div><!-- End Section Title -->
+      </div>
+      <!-- End Section Title -->
 
       <div class="container isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
@@ -209,7 +210,8 @@
               <li data-filter=".filter-specialty">Specialty</li>
             </ul>
           </div>
-        </div><!-- Menu Filters -->
+        </div>
+        <!-- Menu Filters -->
 
         <div class="row isotope-container" data-aos="fade-up" data-aos-delay="200">
 
@@ -221,7 +223,8 @@
             <div class="menu-ingredients">
               A creamy blend of lobster, cream, and spices.
             </div>
-          </div><!-- Menu Item -->
+          </div>
+          <!-- Menu Item -->
 
           <div class="col-lg-6 menu-item isotope-item filter-specialty">
             <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
@@ -231,7 +234,8 @@
             <div class="menu-ingredients">
               Freshly baked bread served with a selection of dips.
             </div>
-          </div><!-- Menu Item -->
+          </div>
+          <!-- Menu Item -->
 
           <div class="col-lg-6 menu-item isotope-item filter-starters">
             <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
@@ -241,7 +245,8 @@
             <div class="menu-ingredients">
               Delicate crab cake served with tartar sauce.
             </div>
-          </div><!-- Menu Item -->
+          </div>
+          <!-- Menu Item -->
 
           <div class="col-lg-6 menu-item isotope-item filter-salads">
             <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
@@ -251,7 +256,8 @@
             <div class="menu-ingredients">
               Crisp romaine with Caesar dressing and croutons.
             </div>
-          </div><!-- Menu Item -->
+          </div>
+          <!-- Menu Item -->
 
           <div class="col-lg-6 menu-item isotope-item filter-specialty">
             <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
@@ -261,7 +267,8 @@
             <div class="menu-ingredients">
               Grilled chicken with artichoke hearts and pesto.
             </div>
-          </div><!-- Menu Item -->
+          </div>
+          <!-- Menu Item -->
 
           <div class="col-lg-6 menu-item isotope-item filter-starters">
             <img src="assets/img/menu/mozzarella.jpg" class="menu-img" alt="">
