--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@
             <div class="menu-ingredients">
               Served with marinara sauce.
             </div>
-          </div><!-- Menu Item -->
+          </div>
+          <!-- Menu Item -->
 
           <div class="col-lg-6 menu-item isotope-item filter-salads">
             <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
@@ -288,7 +289,8 @@
             <div class="menu-ingredients">
               Fresh greens, tomatoes, and Greek olives.
             </div>
-          </div><!-- Menu Item -->
+          </div>
+          <!-- Menu Item -->
 
           <div class="col-lg-6 menu-item isotope-item filter-salads">
             <img src="assets/img/menu/spinach-salad.jpg" class="menu-img" alt="">
@@ -298,7 +300,8 @@
             <div class="menu-ingredients">
               Spinach with mushrooms and bacon vinaigrette.
             </div>
-          </div><!-- Menu Item -->
+          </div>
+          <!-- Menu Item -->
 
           <div class="col-lg-6 menu-item isotope-item filter-specialty">
             <img src="assets/img/menu/lobster-roll.jpg" class="menu-img" alt="">
@@ -308,7 +311,8 @@
             <div class="menu-ingredients">
               Lobster meat with mayo and lettuce on a roll.
             </div>
-          </div><!-- Menu Item -->
+          </div>
+          <!-- Menu Item -->
 
         </div><!-- Menu Container -->
 
