--- a/index.html
+++ b/index.html
@@ -314,7 +314,8 @@
           </div>
           <!-- Menu Item -->
 
-        </div><!-- Menu Container -->
+        </div>
+        <!-- Menu Container -->
 
       </div>
     </section>
@@ -326,7 +327,8 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Specials</h2>
         <p>Discover Our Exclusive Specials</p>
-      </div><!-- End Section Title -->
+      </div>
+      <!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -476,7 +478,8 @@
                   </p>
                 </div>
               </div>
-            </div><!-- End Slider item -->
+            </div>
+            <!-- End Slider item -->
 
             <div class="swiper-slide">
               <div class="row gy-4 event-item">
