--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Name: Restaurantly
+  * Name: Mudassir
   * URL: https://bootstrapmade.com/restaurantly-restaurant-template/
   * Updated: Jun 14 2024 with Bootstrap v5.3.3
   * Author: BootstrapMade.com
