--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- =======================================================
   * Name: Mudassir
-  * URL: https://bootstrapmade.com/restaurantly-restaurant-template/
+  * URL: https://bootstrapmade.com/Dinemasters LLC-restaurant-template/
   * Updated: Jun 14 2024 with Bootstrap v5.3.3
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
@@ -64,7 +64,7 @@
         <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.png" alt=""> -->
-          <h1 class="sitename">Restaurantly</h1>
+          <h1 class="sitename">Dinemasters LLC</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
@@ -99,7 +99,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 d-flex flex-column align-items-center align-items-lg-start">
-            <h2 data-aos="fade-up" data-aos-delay="100">Welcome to <span>Restaurantly</span></h2>
+            <h2 data-aos="fade-up" data-aos-delay="100">Welcome to <span>Dinemasters LLC</span></h2>
             <p data-aos="fade-up" data-aos-delay="200">Empowering local kitchens with technology and marketing for over
               18 years!</p>
             <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
@@ -846,7 +846,7 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>Location</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>30 North Gould Street Suite R Sheridan, WY 82801</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -923,11 +923,11 @@
       <div class="row gy-4">
         <div class="col-lg-6 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Restaurantly</span>
+            <span class="sitename">Dinemasters LLC</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
+            <p>30 North Gould Street Suite R Sheridan,</p>
+            <p> WY 82801</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
             <p><strong>Email:</strong> <span>info@example.com</span></p>
           </div>
@@ -966,14 +966,14 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Restaurantly</strong> <span>All Rights Reserved</span>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Dinemasters LLC</strong> <span>All Rights Reserved</span>
       </p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. a -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/">Mudassir</a>
       </div>
     </div>
 
