--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <h2>Menu</h2>
         <p>Discover Our Delicious Offerings</p>
       </div>
-      <!-- End Section Title -->
+      <!-- End Section Titles -->
 
       <div class="container isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
