--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       </div>
 
     </section>
-    <!-- /Hero Section -->
+    <!-- End Hero Section -->
 
     <!-- About Section -->
     <section id="about" class="about section">
@@ -143,7 +143,7 @@
         </div>
       </div>
     </section>
-    <!-- /About Section -->
+    <!-- End About Section -->
 
 
     <!-- Why Us Section -->
