--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   * URL: https://bootstrapmade.com/Dinemasters LLC-restaurant-template/
   * Updated: Jun 14 2024 with Bootstrap v5.3.3
   * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * License: https://bootstrapmade.com/licenses/
   ======================================================== -->
 </head>
 
