--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
-  <!-- Vendor CSS Files  -->
+  <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -31,10 +31,10 @@
 
   <!-- =======================================================
   * Name: Mudassir
-  * URL: https://bootstrapmade.com/Dinemasters LLC-restaurant-template/
+  * URL: https://Mudassir/Dinemasters LLC-restaurant-template/
   * Updated: Jun 14 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/licenses/
+  * Author: Mudassir
+  * License: https://Mudassir/licenses/
   ======================================================== -->
 </head>
 
@@ -971,9 +971,9 @@
       <div class="credits">
         <!-- All the links in the footer should remain intact. a -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Licensing information: https://Mudassir/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">Mudassir</a>
+        Designed by <a href="https://Mudassir/">Mudassir</a>
       </div>
     </div>
 
