--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/Mudassir/css/Mudassir.min.css" rel="stylesheet">
-  <link href="assets/vendor/Mudassir-icons/Mudassir-icons.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
@@ -31,10 +31,10 @@
 
   <!-- =======================================================
   * Name: Mudassir
-  * URL: https://Mudassir/Dinemasters LLC-restaurant-template/
-  * Updated: Jun 14 2024 with Mudassir v5.3.3
-  * Author: Mudassir
-  * License: https://Mudassir/licenses/
+  * URL: https://bootstrapmade.com/Dinemasters LLC-restaurant-template/
+  * Updated: Jun 14 2024 with Bootstrap v5.3.3
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/licenses/
   ======================================================== -->
 </head>
 
@@ -63,7 +63,7 @@
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.png" alt=" "> -->
+          <!-- <img src="assets/img/logo.png" alt=""> -->
           <h1 class="sitename">Dinemasters LLC</h1>
         </a>
 
@@ -107,7 +107,7 @@
               <!-- <a href="#book-a-table" class="cta-btn">Book a Table</a> -->
             </div>
           </div>
-          <!-- <div class="col-lg-4 d-flex align-items-center  justify-content-center mt-5 mt-lg-0">
+          <!-- <div class="col-lg-4 d-flex align-items-center justify-content-center mt-5 mt-lg-0">
             <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
           </div> -->
         </div>
@@ -149,7 +149,7 @@
     <!-- Why Us Section -->
     <section id="why-us" class="why-us section">
 
-      <!-- Section Title  -->
+      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>WHY US</h2>
         <p>Why Choose Our Services</p>
@@ -971,9 +971,9 @@
       <div class="credits">
         <!-- All the links in the footer should remain intact. a -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://Mudassir/license/ -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://Mudassir/">Mudassir</a>
+        Designed by <a href="https://bootstrapmade.com/">Mudassir</a>
       </div>
     </div>
 
@@ -987,7 +987,7 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/Mudassir/js/Mudassir.bundle.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
